single_choice type questions and backend fixes

--- a/src/express/public/static/index.html
+++ b/src/express/public/static/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+    <link rel="stylesheet" href="css/style.css"></link>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Personality Test</title>
 </head>
 <body>
-    <div id="react-root"></div>
+    <div class="ui container" id="react-root"></div>
     <script src="js/bundle.js"></script>
 </body>
 </html>
